--- a/.github/workflows/release-dry-run.yml
+++ b/.github/workflows/release-dry-run.yml
@@ -27,4 +27,4 @@ jobs:
       - uses: actions/checkout@v3
       - name: Bundle
         run: |
-          make workspace/release/bundle
+          ./make/tasks/workspace/release/bundle.sh
